--- a/assign0/A0.ipynb
+++ b/assign0/A0.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 1"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -134,6 +141,92 @@
     "    print('Yes! Carrying the coconuts is possible.')\n",
     "else:\n",
     "    print('No. Carrying the coconuts is impossible.')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Problem 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cheeses = ['Muenster','Cheddar','Red Leicester']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cheeses_lower = [x.lower() for x in cheeses]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Good morning. Welcome to the National Cheese Emporium!\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"Good morning. Welcome to the National Cheese Emporium!\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What would you like? kk\n"
+     ]
+    }
+   ],
+   "source": [
+    "guest_ask = input(\"What would you like? \").lower()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (<ipython-input-48-1015dc20be86>, line 2)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-48-1015dc20be86>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    if guest_ask in [x.lower() for x in cheeses]\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+     ]
+    }
+   ],
+   "source": [
+    "while True:\n",
+    "    if guest_ask in cheeses\n",
+    "        print(\"We have {} cheese(s)! yessir\".format(guest_ask))\n",
+    "        break\n",
+    "    else:\n",
+    "        print(\"I'm afraid we don't have any {}.\".format(guest_ask))\n",
+    "        guest_ask = input(\"What would you like? \")\n",
+    "        if guest_ask in [\"You...do have some cheese, don't you\",\"Have you in fact got any cheese here at all\"]:\n",
+    "            print(\"We have three cheeses {}!\".format(cheeses))\n",
+    "            guest_ask = input(\"What would you like? \")"
    ]
   },
   {
