--- a/assign0/A0.ipynb
+++ b/assign0/A0.ipynb
@@ -170,6 +170,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(cheeses)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 24,
    "metadata": {},
    "outputs": [
@@ -225,8 +245,46 @@
     "        print(\"I'm afraid we don't have any {}.\".format(guest_ask))\n",
     "        guest_ask = input(\"What would you like? \")\n",
     "        if guest_ask in [\"You...do have some cheese, don't you\",\"Have you in fact got any cheese here at all\"]:\n",
-    "            print(\"We have three cheeses {}!\".format(cheeses))\n",
+    "            print(f\"We have {len(cheeses)} cheeses!\\n {cheeses[0]} \\n {cheeses[1]}\\n {cheeses[2]}\")\n",
     "            guest_ask = input(\"What would you like? \")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 3 cheeses!\n",
+      " Muenster\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"We have {} cheeses!\\n {}\".format(len(cheeses),cheeses[0]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "We have 3 cheeses!\n",
+      " Muenster \n",
+      " Cheddar\n",
+      " Red Leicester\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f\"We have {len(cheeses)} cheeses!\\n {cheeses[0]} \\n {cheeses[1]}\\n {cheeses[2]}\")"
    ]
   },
   {
