--- a/assign0/A0.ipynb
+++ b/assign0/A0.ipynb
@@ -289,10 +289,272 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "name = 'kk. '"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kk'"
+      ]
+     },
+     "execution_count": 72,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.strip('. ')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'kk'"
+      ]
+     },
+     "execution_count": 69,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "name.strip().strip(\".\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def file_len(fname):\n",
+    "    with open(fname) as f:\n",
+    "        for i, l in enumerate(f):\n",
+    "            pass\n",
+    "    return i + 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "What is the capital of Assyriaashur\n",
+      "found\n"
+     ]
+    }
+   ],
+   "source": [
+    "question = 'the capital of Assyria'\n",
+    "answer = ['ashur', 'kalhu', 'dur-sharrukin', 'nineveh', 'harra']\n",
+    "trick_answer = input(f\"What is {question}\")\n",
+    "for i, item in enumerate(answer):\n",
+    "    if trick_answer.find(item) >= 0:\n",
+    "        print(\"found\")\n",
+    "        break\n",
+    "    else:\n",
+    "        print(trick_answer)\n",
+    "        print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 117,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 117,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trick_answer.find('ashur')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 116,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trick_answer=\"ashu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 102,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "trick_answer.find(item\n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "KEEPER: Stop! Who would cross the Bridge of Death must answer me these questions three, 'ere the other side he see.\n",
+      "KEEPER: What is your name? My name is Sir Lancelot of Camelot.\n",
+      "KEEPER: What is your quest? To seek the Holy Grail.\n",
+      "KEEPER: What is your favorite colorBlue.\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'enumerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-127-41cf4a8e85bc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     18\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"KEEPER: Auuuuuuuugh!\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     19\u001b[0m             \u001b[0;32mbreak\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 20\u001b[0;31m         \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0manswer\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     21\u001b[0m             \u001b[0;32mif\u001b[0m \u001b[0mtrick_answer\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfind\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m>=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     22\u001b[0m                 \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"KEEPER: Right. Off you go.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'enumerator' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"answers.txt\") as f:\n",
+    "    for line in f:\n",
+    "        print(\"KEEPER: Stop! Who would cross the Bridge of Death must answer me these questions three, 'ere the other side he see.\")\n",
+    "        name = input(\"KEEPER: What is your name? \").strip(\"!. \")\n",
+    "        if name.find('?') >= 0:\n",
+    "            print(\"KEEPER: Auuuuuuuugh!\")\n",
+    "            break\n",
+    "        quest = input(\"KEEPER: What is your quest? \").strip(\"!. \")\n",
+    "        if quest.find('?') >= 0:\n",
+    "            print(\"KEEPER: Auuuuuuuugh!\")\n",
+    "            break\n",
+    "        data = line.split(\"?\")\n",
+    "        question = data[0]\n",
+    "        answer = data[1].strip().split('|')\n",
+    "        answer[-1] = answer[-1].strip(' \\n')\n",
+    "        trick_answer = input(f\"KEEPER: What is {question}\").lower()\n",
+    "        if trick_answer.find('?') >= 0:\n",
+    "            print(\"KEEPER: Auuuuuuuugh!\")\n",
+    "            break\n",
+    "        for i,item in enumerate(answer):\n",
+    "            if trick_answer.find(item) >= 0:\n",
+    "                print(\"KEEPER: Right. Off you go.\")\n",
+    "                break\n",
+    "            elif i+1 == len(answer):\n",
+    "                print(name.upper()+\": Auuuuuuuugh!\")\n",
+    "            \n",
+    "            \n",
+    "            enumerator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "range(0, 4)"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "for i in range(file_len(\"answers.txt\")):\n",
+    "    name = input(\"What is your name? \").stip(\"!. \")\n",
+    "    quest = input(\"What is your quest? \").stip(\"!. \")\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 129,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'enumerator' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-129-e5297e806d4c>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0menumerator\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'answer'\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m: name 'enumerator' is not defined"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('answers.txt', 'r') as f:\n",
+    "    content=f."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"Stop! Who would cross the Bridge of Death must answer me these questions three, 'ere the other side he see.\")\n",
+    "name = input(\"What is your name? \").stip(\". \")\n",
+    "quest = input(\"What is your quest? \").stip(\". \")"
+   ]
   }
  ],
  "metadata": {
